generic swagger response
