# internal/pkg/list/list_model.go
@@ -21,15 +21,6 @@ type AddList struct {
 	Name string `json:"name"`
 }
 
-// TODO: Create generic response type
-type ListResponse struct {
-	Data *List `json:"data"`
-}
-
-type ListsResponse struct {
-	Data []List `json:"data"`
-}
-
 type ListItem struct {
 	ID        uuid.UUID  `db:"id" json:"id"`
 	CreatedAt time.Time  `db:"created_at" json:"createdAt"`
@@ -43,17 +34,10 @@ type UpdateListItem struct {
 	Crossed bool `json:"crossed"`
 }
 
-type ListItemResponse struct {
-	Data *ListItem `json:"data"`
-}
-
 type DefaultList struct {
 	ID        uuid.UUID  `db:"id" json:"id"`
 	CreatedAt time.Time  `db:"created_at" json:"createdAt"`
 	UpdatedAt *time.Time `db:"updated_at" json:"updatedAt"`
 	UserID    string     `db:"app_user_id" json:"userId"`
 	ListID    uuid.UUID  `db:"list_id" json:"listId"`
-}
-type DefaultListResponse struct {
-	Data *DefaultList `json:"data"`
 }
